use advancement api to add to adventuring time